# djinn

./: .gitignore  CONTRIBUTING.md  DEVIATIONS.md  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  min_compute.yml  setup.py
circuits/: package.json  pnpm-lock.yaml
contracts/: .env.example  .gas-snapshot  README.md  foundry.toml
djinn_subnet/: __init__.py
docs/: miner.md  pdf-header.tex  pdf-style.css  validator.md  whitepaper.md
miner/: .dockerignore  .env.example  Dockerfile  pyproject.toml
miner/djinn_miner/: __init__.py  config.py  main.py
miner/djinn_miner/api/: metrics.py  middleware.py  models.py  server.py
miner/djinn_miner/bt/: neuron.py
miner/djinn_miner/core/: checker.py  health.py  proof.py  tlsn.py
miner/djinn_miner/data/: odds_api.py
miner/tests/: conftest.py  test_api.py  test_checker.py  test_config.py  test_health.py  test_logging.py  test_main.py  test_metrics.py  test_middleware.py  test_models.py  test_neuron.py  test_odds_api.py  test_proof.py  test_session_capture.py  test_tlsn.py
neurons/: miner.py  validator.py
observability/: docker-compose.yml
scripts/: deploy-base-sepolia.sh  deploy_base.sh  deploy_local.sh  mint-test-usdc.sh  run_docker_tests.sh  testnet-admin.mjs  transfer-ownership.sh  update_subgraph.sh
subgraph/: .env.example  .gitignore  networks.json  package-lock.json  package.json  schema.graphql  subgraph.yaml
tests/: test_template_validator.py
validator/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
validator/djinn_validator/: __init__.py  config.py  main.py
validator/djinn_validator/api/: metrics.py  middleware.py  models.py  server.py
validator/djinn_validator/bt/: neuron.py
validator/djinn_validator/chain/: contracts.py
validator/djinn_validator/core/: burn_ledger.py  challenges.py  mpc.py  mpc_coordinator.py  mpc_orchestrator.py  ot.py  ot_network.py  outcomes.py  purchase.py  scoring.py  shares.py  spdz.py  tlsn.py
validator/djinn_validator/utils/: circuit_breaker.py  crypto.py
validator/tests/: conftest.py  test_api.py  test_burn_ledger.py  test_chain.py  test_challenges.py  test_circuit_breaker.py  test_config.py  test_crypto.py  test_distributed_mpc.py  test_integration.py  test_integration_e2e.py  test_integration_lifecycle.py  test_logging.py  test_main.py  test_metrics.py  test_middleware.py  test_models.py  test_mpc.py  test_mpc_api.py  test_mpc_coordinator.py  test_mpc_e2e.py  test_mpc_orchestrator.py  test_neuron.py  test_ot.py  test_ot_network.py  test_outcomes.py  test_purchase.py  test_scoring.py  test_secure_mpc.py  test_shares.py  test_spdz.py  test_tlsn.py
web/: .dockerignore  (+11 more)
(+220 files in other folders)
