[project]
name = "djinn-miner"
version = "0.1.0"
description = "Djinn Protocol Bittensor miner — line availability checking, TLSNotary proof generation"
requires-python = ">=3.11"
dependencies = [
    "bittensor>=8.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "coverage>=7.0.0",
]

[project.scripts]
djinn-miner = "djinn_miner.main:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
